--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
     "razorpay": "^2.9.2",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
