--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "node-mailjet": "^6.0.5",
     "nodemon": "^3.0.2",
     "razorpay": "^2.9.2",
     "sequelize": "^6.35.2",
