--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.0.2",
     "razorpay": "^2.9.2",
     "sequelize": "^6.35.2",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.1"
   }
 }
