--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "anujeet swain",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1520.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
