--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "start-server": "nodemon app.js",
+    "start-dev": "node app.js"
   },
   "author": "anujeet swain",
   "license": "ISC",
@@ -17,10 +19,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
     "node-mailjet": "^6.0.5",
     "nodemon": "^3.0.2",
+    "path": "^0.12.7",
     "razorpay": "^2.9.2",
     "sequelize": "^6.35.2",
     "sib-api-v3-sdk": "^8.5.0",
