--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
     "node-mailjet": "^6.0.5",
